<io.particle.android.sdk.utils.ui.SoftKeyboardVisibilityDetectingLinearLayout
    android:id="@+id/keyboard_change_detector_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:paddingBottom="24dp"
    tools:context="io.particle.android.sdk.devicesetup.ui.ManualNetworkEntryActivity">

    <include layout="@layout/brand_image_header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            style="@style/SectionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manual_network_name_entry"
            tools:ignore="MissingPrefix"/>

        <EditText
            android:id="@+id/network_name"
            style="@style/SparkEditText"
            android:layout_width="match_parent"
            android:layout_marginBottom="12dp"
            android:hint="@string/hint_network_name"
            android:inputType="textAutoComplete"/>

        <CheckBox
            android:id="@+id/network_requires_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:checked="true"
            android:text="@string/network_requires_password"/>

        <Button
            android:id="@+id/action_connect"
            style="@style/SparkButton"
            android:layout_marginBottom="4dp"
            android:onClick="onConnectClicked"
            android:text="@string/connect"/>

        <Button
            android:id="@+id/action_cancel"
            style="@style/SparkButton"
            android:onClick="onCancelClicked"
            android:text="@string/cancel"/>


    </LinearLayout>

</io.particle.android.sdk.utils.ui.SoftKeyboardVisibilityDetectingLinearLayout>
