<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:animateLayoutChanges="true"
              android:clipChildren="false"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              tools:context="io.particle.android.sdk.devicesetup.ui.GetReadyActivity">

    <include layout="@layout/brand_image_header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:clipChildren="false"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/get_ready_text_title"
            style="@style/SectionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/get_ready_title_text"
            tools:ignore="RtlHardcoded"/>

        <TextView
            android:id="@+id/get_ready_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/get_ready_text"
            android:textSize="@dimen/text_size_small"
            tools:ignore="RtlHardcoded"/>

        <TextView
            android:id="@+id/action_troubleshooting"
            style="@style/LinkText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center_horizontal"
            android:text="@string/troubleshooting"
            android:visibility="gone"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/action_im_ready"
                style="@style/SparkButton.InSpinnerBox"
                android:text="@string/im_ready"/>

            <ProgressBar
                android:id="@id/button_progress_indicator"
                style="@style/SparkSpinner"
                android:layout_alignLeft="@id/action_im_ready"
                tools:ignore="RtlHardcoded"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
