<io.particle.android.sdk.utils.ui.SoftKeyboardVisibilityDetectingLinearLayout
    android:id="@+id/keyboard_change_detector_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="24dp"
    tools:context="io.particle.android.sdk.devicesetup.ui.PasswordEntryActivity">

    <include layout="@layout/brand_image_header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:clipChildren="false"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            style="@style/SectionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/this_network_requires_a_password"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal"
            android:paddingLeft="2dp"
            android:paddingRight="2dp">

            <TextView
                android:id="@+id/ssid"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:ellipsize="middle"
                android:singleLine="true"
                android:text="(ssid)"
                android:textSize="@dimen/text_size_small"
                tools:ignore="HardcodedText,Deprecated"/>

            <TextView
                android:id="@+id/security_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:singleLine="true"
                android:text="Unsecured network"
                android:textSize="@dimen/text_size_small"
                tools:ignore="HardcodedText,MissingPrefix,Deprecated"/>

        </LinearLayout>

        <EditText
            android:id="@+id/password"
            style="@style/SparkEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"/>

        <CheckBox
            android:id="@+id/show_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="4dp"
            android:checked="true"
            android:text="@string/show_password"/>

        <Button
            android:id="@+id/action_connect"
            style="@style/SparkButton"
            android:onClick="onConnectClicked"
            android:text="@string/connect"/>

        <Button
            android:id="@+id/action_cancel"
            style="@style/SparkButton"
            android:onClick="onCancelClicked"
            android:text="@string/change_network"/>

    </LinearLayout>

</io.particle.android.sdk.utils.ui.SoftKeyboardVisibilityDetectingLinearLayout>
