<io.particle.android.sdk.utils.ui.SoftKeyboardVisibilityDetectingLinearLayout
    android:id="@+id/keyboard_change_detector_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:clipChildren="false"
    android:orientation="vertical"
    android:paddingBottom="96dp"
    tools:context="io.particle.android.sdk.accountsetup.PasswordResetActivity">

    <include layout="@layout/brand_image_header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:clipChildren="false"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            style="@style/SectionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="8dp"
            android:text="@string/request_password_reset"
            tools:ignore="MissingPrefix"/>

        <EditText
            android:id="@+id/email"
            style="@style/SparkEditText"
            android:layout_width="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="24dp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:clipChildren="false">

            <Button
                android:id="@+id/action_reset_password"
                style="@style/SparkButton.InSpinnerBox"
                android:onClick="onPasswordResetClicked"
                android:text="@string/reset_password"/>

            <ProgressBar
                android:id="@id/button_progress_indicator"
                style="@style/SparkSpinner"
                android:layout_alignLeft="@id/action_create_account"
                tools:ignore="RtlHardcoded"/>

        </RelativeLayout>

        <Button
            android:id="@+id/action_cancel"
            style="@style/SparkButton"
            android:text="@string/cancel"/>
    </LinearLayout>

</io.particle.android.sdk.utils.ui.SoftKeyboardVisibilityDetectingLinearLayout>
